# PolyEngineInfer_FilipFan

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts  spotless.gradle
api/src/main/java/dev/filipfan/polyengineinfer/api/: LlmInferenceOptions.kt
app/: build.gradle.kts
app/src/main/java/dev/filipfan/polyengineinfer/ui/chat/: ChatModelHelper.kt  ChatViewModel.kt
app/src/main/java/dev/filipfan/polyengineinfer/ui/settings/: ChatTemplateDropdown.kt  SettingsEnumDropdown.kt  SettingsScreen.kt  SettingsViewModel.kt
chattemplate/: build.gradle.kts
chattemplate/src/androidTest/java/dev/filipfan/polyengineinfer/chattemplate/: TemplateFormatterTest.kt
chattemplate/src/main/cpp/: CMakeLists.txt  jni_template_formatter.cpp  llm_chat_templates.cpp  llm_chat_templates.h
chattemplate/src/main/java/dev/filipfan/polyengineinfer/chattemplate/: BuiltInTemplates.kt  ChatContent.kt  TemplateFormatter.kt
docs/notebooks/: ExportRecipe_Llama-3.2-1B_Vulkan_Backend_Instruct.ipynb
gradle/: libs.versions.toml
litertlm/: build.gradle.kts
litertlm/src/androidTest/assets/: README.md
litertlm/src/androidTest/java/dev/filipfan/polyengineinfer/litertlm/: LiteRtLmInferenceTest.kt
litertlm/src/main/: AndroidManifest.xml
litertlm/src/main/java/dev/filipfan/polyengineinfer/litertlm/: LiteRtLmInference.kt
mediapipe/src/main/java/dev/filipfan/polyengineinfer/mediapipe/: MediaPipeInference.kt
onnx/: build.gradle.kts
